# kube-redirect-operator

./: Cargo.toml  Containerfile
.github/workflows/: ci.yml
samples/: kube-redirect-operator.deploy.yaml  kube-redirect-operator.is.yaml  kube-redirect-operator.sa.yaml  kube-redirect-operator.svc.yaml  redirect-operator.clusterrole.yaml  redirect-operator.clusterrolebinding.yaml  redirect-operator.deploy.yaml  redirect-operator.is.yaml  redirect-operator.role.yaml  redirect-operator.rolebinding.yaml  redirect-operator.sa.yaml  redirect-operator.servicemonitor.yaml  redirect-operator.svc.yaml
src/: controller.rs  crdgen.rs  main.rs  metrics.rs  types.rs
