[package]
name = "kube-redirector"
version = "0.1.0"
edition = "2024"
description = "A Kubernetes operator to redirect HTTP requests"
readme = "README.md"
homepage = "https://github.com/ibotty/rust-redirector"
repository = "https://github.com/ibotty/rust-redirector"
license = "MIT OR Apache-2.0"
keywords = ["kubernetes", "http"]
categories = ["virtualization"]
default-run = "controller"

[features]
default = []
yaml = ["serde_yaml"]

[dependencies]
kube = { version = "2", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26.0", features = ["latest"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.8.4", default-features = false, features = ["http1", "macros", "tokio"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
anyhow = "1.0.99"
futures = { version = "0.3", default-features = false }
axum-extra = { version = "0.10.1", default-features = false, features = ["typed-header"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
schemars = "1"
thiserror = "2.0.16"
prometheus-client = "0.24.0"
serde_yaml = { version="0.9.34", optional = true }

[[bin]]
doc = false
name = "controller"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"
required-features = ["yaml"]

[profile.release]
strip = true
lto = true
codegen-units = 1
#panic = "abort" # .6MB reduction, 10%
